--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="131.0" prefWidth="233.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/25">
+<VBox prefHeight="204.0" prefWidth="352.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21">
    <children>
       <Label text="About">
          <font>
@@ -16,13 +15,10 @@
             <Insets bottom="10.0" left="20.0" top="10.0" />
          </padding>
       </Label>
-      <Label text="JavaFX Application Demo">
+      <Label text="JavaFX application demo">
          <padding>
             <Insets left="20.0" />
          </padding>
       </Label>
    </children>
-   <padding>
-      <Insets bottom="10.0" left="20.0" top="10.0" />
-   </padding>
 </VBox>
